# MultiClassDiskDistributions

./: .gitignore  README.md
ASMCDD/: main.cpp  plot.py
ASMCDD/src/: utils.cpp
common/: fps.py  smallestenclosingcircle.py
outputs/: forest_pcf_2_2.txt  zerg_rush_init.txt  zerg_rush_pcf_0_0.txt
pure_cpp/: CMakeLists.txt  main.cpp  plot.py
pure_cpp/include/: utils.h
pure_cpp/outputs/: init_pts_final.txt
pure_cpp/src/: Category.cpp
python/: asmcdd.py  computeFunctions.py  main.py  refine.py  refiner.py  trainer.py  utils.py
python_elements/: asmcdd.py  computeFunctions.py  gen_new_data.py  main.py  refiner.py  renderer.py  trainer.py  utils.py
python_elements/configs/: first.txt  praise_the_sun.txt
python_elements/examples/: first.txt
python_parallel/: asmcdd.py  computeFunctions.py  main.py  utils.py
simpler_cpp/: main.cpp  plot.py
simpler_cpp/configs/: constrained.txt  constrained_overlap.txt  forest.txt
simpler_cpp/include/: ASMCDD.h  Category.h  utils.h
simpler_cpp/outputs/: constrained_init.txt  constrained_overlap_init.txt  constrained_prettypcf_0.txt  constrained_prettypcf_1.txt  constrained_prettypcf_2.txt  debug_forest_0.txt  debug_forest_1.txt  debug_forest_2.txt  forest_0.txt  forest_init.txt  forest_no_interaction_init.txt  forest_no_interaction_pcf_0_0.txt  forest_no_interaction_pcf_1_1.txt  forest_pcf_0.txt  forest_pcf_0_0.txt  forest_pcf_0_1.txt  forest_pcf_0_2.txt  forest_pcf_1.txt  forest_pcf_1_1.txt  (+13 more)
taichi/: asmcdd.py  computeFunctions.py  computeFunctions_ti.py  main.py  preprocess.py  solver.py  trainer.py  utils.py
(+39 files in other folders)
